--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -13,21 +13,30 @@ knitr::opts_chunk$set(
 )
 ```
 
-# irtplay_1.6.3 (2021-06-30)
+# irtplay_1.6.3 (2021-10-26)
+o updated the `est_irt()` function to estimate the population latent ability distribution only when all item parameters are fixed in a test using the fixed item parameter calibration (FIPC). 
 
-o updated 'est_score' function to make it return NA values for examinees who have all missing responses.
+o fixed the `est_irt()` function so that the log-likelihood, AIC, and BIC can be computed based on both the fixed- and freely estimated items when the FIPC is implemented. In the previous version, those valused were computed based on only freely estimated items. 
 
-o fixed an error of 'est_score' function which occurs when an examinee has missing data for all polytomous items or dichotomous items (thanks to Craig Wells).
+o added a new argument of 'item.id' in the 'est_irt()' and 'est_item()' functions where a user can provide item IDs.  
 
-o fixed a few minor issues of 'irtfit' function (thanks to Dimitrios Zacharatos).
+o added a new 'rdif()' function which computes RDIF statistics (Lim, Choe, & Han, 2021) for analyzing DIF.  
 
-o Updated 'bring.flexmirt' function to read the empirical histogram of population distribution from "-prm.txt" file.
+o updated 'plot.test.info()' function so that (a) multiple item information functions can be displayed in one panel by setting 'overlap = TRUE' and (b) a plot of conditional standard error of estimation at a test level can be shown by setting 'csee = TRUE'. 
 
-o Updated 'run_flexmirt' function to run flexMIRT in which version is >= 3.6.
+o updated 'est_score()' function to make it return NA values for examinees who have all missing responses.
 
-o Updated 'est_item' function to produce a variance-covariance matrix for item parameter estimates.
+o fixed an error of 'est_score()' function which occurs when an examinee has missing data for all polytomous items or dichotomous items (thanks to Craig Wells).
 
-o Added 'vcov' method for 'est_item' function.
+o fixed a few minor issues of 'irtfit()' function (thanks to Dimitrios Zacharatos).
+
+o Updated 'bring.flexmirt()' function to read the empirical histogram of population distribution from "-prm.txt" file.
+
+o Updated 'run_flexmirt()' function to run flexMIRT in which version is >= 3.6.
+
+o Updated 'est_item()' function to produce a variance-covariance matrix for item parameter estimates.
+
+o Added 'vcov()' method for 'est_item' function.
 
 
 # irtplay_1.6.2 (2020-12-14)
