Updated new functions

--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -14,8 +14,10 @@ knitr::opts_chunk$set(
 ```
 
 
-# irtplay_1.6.4 (2021-11-22)
-o added a new function, 'est_mg()', for the multiple group (MG) item calibration (Bock & Zimowski, 1997). The new function also supports the MG fixed item calibration (MG-FIPC) method (e.g., Kim & Kolen, 2016).   
+# irtplay_1.6.4 (2022-01-05)
+o added a beta version of new function, 'catsib()', for computing CATSIB statistic (Nandakumar & Roussos, 2004) to detect DIF on items in CAT. 
+
+o added a new function, 'est_mg()', for the multiple group (MG) item calibration (Bock & Zimowski, 1997). The new function also supports the MG fixed item calibration (MG-FIPC) method (e.g., Kim & Kolen, 2016).
 
 o added a new argument, 'se', in the 'est_irt()' function. If 'se = FALSE', the standard errors of the item parameter estimates are not computed.
 
